@@ -69,10 +69,53 @@ dependencies {
   	samplesCompile sourceSets.main.output, sourceSets.swing.output
 }
 
-configurations.all {
-    resolutionStrategy {
-        cacheChangingModulesFor 0, 'seconds'
+/*
+ * --- Jigsaw --- 
+ */
+ 
+def jigsaw = JavaVersion.current().isJava9Compatible()
+
+if (jigsaw) {
+    println("Creating a module-info")
+    
+    ext.moduleName = 'com.dua3.meja' 
+    
+    sourceSets {
+        moduleInfo {
+            java {
+                srcDir 'src/module-info/java'            
+            }
+        }
     }
+    
+    compileModuleInfoJava {
+        sourceCompatibility = 9
+        targetCompatibility = 9
+    
+        inputs.property("moduleName", moduleName)
+    
+        doFirst {
+            classpath += sourceSets.main.compileClasspath
+            classpath += sourceSets.swing.compileClasspath
+            
+            options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-SYSTEM',
+                '-d', sourceSets.main.output.classesDirs.asPath
+            ]
+        }
+    }
+    
+    jar 
+    {
+        from sourceSets.main.output
+        from sourceSets.swing.output
+        from sourceSets.moduleInfo.output
+    }
+}
+
+spotbugs {
+    sourceSets = [sourceSets.main, sourceSets.swing, sourceSets.samples]
 }
 
 spotbugs {
